  * New upstream release candidate.
    + 06_fix_texture_data_corruption.patch,
      07_call_radeonSetCliprects_from_radeonMakeCurrent.patch,
      08_r300_update_window_state_when_bound_but_stamp_changed.patch,
      09_i915_always_enable_pixel_fog.patch: remove, included upstream.
  * Add build-dependencies on libxdamage-dev and libxfixes-dev.
  * Resync debian/scripts/install-source.sh.

 -- Julien Cristau <jcristau@debian.org>  Sun, 22 Apr 2007 00:50:43 +0200

mesa (6.5.2-5) UNRELEASED; urgency=low

  * Add 07_call_radeonSetCliprects_from_radeonMakeCurrent.patch
    (closes: #420164). Thanks to Christian Ohm.
  * Add 08_r300_update_window_state_when_bound_but_stamp_changed.patch
  * Add 09_i915_always_enable_pixel_fog.patch

 -- Brice Goglin <Brice.Goglin@ens-lyon.org>  Fri, 20 Apr 2007 18:36:51 +0200

mesa (6.5.2-4) unstable; urgency=low

  [ Julien Cristau ]
  * debian/control: libgl1-mesa-dri now suggests libglide3, with an
    explanation in the description (closes: #387339).
  * Upload to unstable.

  [ Brice Goglin ]
  * Add 06_fix_texture_data_corruption.patch (closes: #412346).

 -- Julien Cristau <jcristau@debian.org>  Fri, 20 Apr 2007 05:57:35 +0200

mesa (6.5.2-3) experimental; urgency=low

  * Set LIB_DIR and EXTRA_LIB_PATH in configs/debian-default to override
    settings in configs/linux-x86-64. This fixes a FTBFS on amd64, thanks to
    Marc 'HE' Brockschmidt for the report (closes: #410118).

 -- Julien Cristau <jcristau@debian.org>  Wed,  7 Feb 2007 23:04:28 +0100

mesa (6.5.2-2) experimental; urgency=low

  * Sync Section/Priority for all packages with the override.
  * Build the arch:all debs in binary-indep, and use the debhelper -s option
    for commands in binary-arch, to fix FTBFS on non-i386 archs, thanks to
    Marc 'HE' Brockschmidt (closes: #409638).
  * Add myself to Uploaders.

 -- Julien Cristau <jcristau@debian.org>  Sun,  4 Feb 2007 21:14:02 +0100

mesa (6.5.2-1) experimental; urgency=low

  [ Thierry Reding ]