@@ -13,8 +13,9 @@ mesa (6.5.3~rc2-1) UNRELEASED; urgency=low
       09_i915_always_enable_pixel_fog.patch: remove, included upstream.
   * Add build-dependencies on libxdamage-dev and libxfixes-dev.
   * Resync debian/scripts/install-source.sh.
+  * Build mesa-swx11-source only in binary-indep.
 
- -- Julien Cristau <jcristau@debian.org>  Sun, 22 Apr 2007 00:50:43 +0200
+ -- Julien Cristau <jcristau@debian.org>  Sun, 22 Apr 2007 01:06:39 +0200
 
 mesa (6.5.2-5) UNRELEASED; urgency=low
 
